force-app/main/default/objects/Policy__c/fields/Account_Partner_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Partner_ID__c</fullName>
    <description>Looks up Partner ID from parent Person Account.</description>
    <formula>Customer__r.Partner_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Partner ID</label>
    <type>Text</type>
</CustomField>