force-app/main/default/objects/Policy__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <description>This field will indicate whether a Policy is active based on the Expiry Date</description>
    <formula>IF ( Datevalue( Expiry_Date_time__c ) &gt; TODAY(), TRUE, FALSE)</formula>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>