force-app/main/default/objects/Policy__c/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <description>The type of business this policy represents (New Business or Renewal).</description>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NewBusiness</fullName>
                <label>New Business</label>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>MTA</fullName>
            </value>
            <value>
                <fullName>DetailChange</fullName>
                <label>Detail Change</label>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>SelfRenewal</fullName>
                <label>Manual Renewal</label>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>RenewalLapse</fullName>
                <label>Renewal Lapse</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>