force-app/main/default/objects/Policy__c/fields/Cancellation_Date_Effective__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Date_Effective__c</fullName>
    <label>Cancellation Date Effective</label>
    <type>DateTime</type>
</CustomField>