force-app/main/default/objects/Policy__c/fields/Cancellation_Date_Requested__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Date_Requested__c</fullName>
    <label>Cancellation Date Requested</label>
    <type>DateTime</type>
</CustomField>