force-app/main/default/objects/Policy__c/fields/Cancellation_Type__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Type__c</fullName>
    <label>Cancellation Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cooling_Off_Period</fullName>
                <label>Cooling Off Period</label>
            </value>
            <value>
                <fullName>Midterm_Cancellation</fullName>
                <label>Midterm Cancellation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>