force-app/main/default/objects/Policy__c/fields/Cancellation_Type_Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Type_Additional_Information__c</fullName>
    <label>Cancellation Type Additional Information</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Cancellation_Type_Sub_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Two Instalments Remaining</fullName>
            </value>
            <value>
                <fullName>Loan Has Been Cancelled</fullName>
            </value>
            <value>
                <fullName>All Instalments Have Been Paid</fullName>
            </value>
            <value>
                <fullName>Referred to Insync</fullName>
            </value>
            <value>
                <fullName>30 Days Notice Issued</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>