force-app/main/default/objects/Policy__c/fields/Cancellation_Type_Sub_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Type_Sub_Reason__c</fullName>
    <label>Cancellation Type Sub Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Cancellation_Type_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Better Offers from Competitors</fullName>
            </value>
            <value>
                <fullName>Lack of Customization</fullName>
            </value>
            <value>
                <fullName>Perception of Value</fullName>
            </value>
            <value>
                <fullName>Premium Increases</fullName>
            </value>
            <value>
                <fullName>1 Year</fullName>
            </value>
            <value>
                <fullName>NTU</fullName>
            </value>
            <value>
                <fullName>Financial Difficulty</fullName>
            </value>
            <value>
                <fullName>Non-Payment</fullName>
            </value>
            <value>
                <fullName>CDC - Loan Rejected</fullName>
            </value>
            <value>
                <fullName>Payment Error</fullName>
            </value>
            <value>
                <fullName>Better Fit Elsewhere</fullName>
            </value>
            <value>
                <fullName>Changes in Risk Profile</fullName>
            </value>
            <value>
                <fullName>Claim Experience</fullName>
            </value>
            <value>
                <fullName>Inadequate Coverage</fullName>
            </value>
            <value>
                <fullName>Misunderstanding of Terms</fullName>
            </value>
            <value>
                <fullName>Overlapping Policies</fullName>
            </value>
            <value>
                <fullName>Referred to Insync</fullName>
            </value>
            <value>
                <fullName>Inception Date Change</fullName>
            </value>
            <value>
                <fullName>Policy Alignment</fullName>
            </value>
            <value>
                <fullName>IR35 Cover Level Change</fullName>
            </value>
            <value>
                <fullName>CBPF Error</fullName>
            </value>
            <value>
                <fullName>Payment Method Change</fullName>
            </value>
            <value>
                <fullName>Request by Insurers</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Discounts and Incentives Elsewhere</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>