force-app/main/default/objects/Policy__c/fields/Documents_for_partners_received__c.field-meta.xml
<CustomField>
    <fullName>Documents_for_partners_received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documents for partners received</label>
    <type>Checkbox</type>
</CustomField>