force-app/main/default/objects/Policy__c/fields/Expired__c.field-meta.xml
<CustomField>
    <fullName>Expired__c</fullName>
    <formula>TODAY() &gt; DATEVALUE(Expiry_Date_time__c)</formula>
    <label>Expired</label>
    <type>Checkbox</type>
</CustomField>