force-app/main/default/objects/Policy__c/fields/Expiry_Date_Time_45D__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date_Time_45D__c</fullName>
    <formula>DATEVALUE(Expiry_Date_time__c) - 45 = TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiry Date/Time - 45D</label>
    <type>Checkbox</type>
</CustomField>