force-app/main/default/objects/Policy__c/fields/Expiry_Date_time__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date_time__c</fullName>
    <label>Expiry Date/Time</label>
    <type>DateTime</type>
</CustomField>