force-app/main/default/objects/Policy__c/fields/Expiry_Date_Time_Formula__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Date_Time_Formula__c</fullName>
    <description>Formula field to convert the time of Expiry_Date_time__c to GMT if running User is in BST and display expiry time as 23:59:59.</description>
    <formula>RIGHT(&quot;00&quot;&amp;
TEXT(DAY(DATEVALUE( Expiry_Date_time__c ))), 2) &amp; &quot;/&quot; &amp;
RIGHT(&quot;00&quot; &amp;
TEXT(MONTH(DATEVALUE( Expiry_Date_time__c ))), 2) &amp; &quot;/&quot; &amp;
TEXT(YEAR(DATEVALUE( Expiry_Date_time__c ))) &amp; &quot; 23:59&quot;</formula>
    <label>Expiry Date/Time Formula</label>
    <type>Text</type>
</CustomField>