force-app/main/default/objects/Policy__c/fields/From_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>From_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This links to the won Opportunity which this Policy was created from.</description>
    <label>From Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Policies</relationshipLabel>
    <relationshipName>Policies</relationshipName>
    <type>Lookup</type>
</CustomField>