force-app/main/default/objects/Policy__c/fields/Inception_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Inception_Date_Time__c</fullName>
    <label>Inception Date/Time</label>
    <type>DateTime</type>
</CustomField>