force-app/main/default/objects/Policy__c/fields/Instalment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Instalment_Amount__c</fullName>
    <description>The individual amount of each instalment to be paid.</description>
    <label>Instalment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>