force-app/main/default/objects/Policy__c/fields/INSTANDA_Policy_ID__c.field-meta.xml
<CustomField>
    <fullName>INSTANDA_Policy_ID__c</fullName>
    <externalId>true</externalId>
    <label>INSTANDA Policy ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>