force-app/main/default/objects/Policy__c/fields/IPT_Rate__c.field-meta.xml
<CustomField>
    <fullName>IPT_Rate__c</fullName>
    <label>IPT Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>