force-app/main/default/objects/Policy__c/fields/IR35_Level__c.field-meta.xml
<CustomField>
    <fullName>IR35_Level__c</fullName>
    <description>Field distinguishing sub-product of IR35 policy</description>
    <label>IR35 Level</label>
    <length>30</length>
    <type>Text</type>
</CustomField>