force-app/main/default/objects/Policy__c/fields/Is_Not_Renewing__c.field-meta.xml
<CustomField>
    <fullName>Is_Not_Renewing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Not Renewing</label>
    <type>Checkbox</type>
</CustomField>