force-app/main/default/objects/Policy__c/fields/Is_Not_Renewing_Formula__c.field-meta.xml
<CustomField>
    <fullName>Is_Not_Renewing_Formula__c</fullName>
    <description>Shows ticked if a value is selected from Not Renewing Reason</description>
    <formula>NOT( ISBLANK( TEXT( Not_Renewing_Reason_Picklist__c ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Not Renewing</label>
    <type>Checkbox</type>
</CustomField>