force-app/main/default/objects/Policy__c/fields/Issue_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Issue_Date_Time__c</fullName>
    <description>The date the policy was issued/written. Essentially the date is was purchased.</description>
    <label>Issue Date/Time</label>
    <type>DateTime</type>
</CustomField>