force-app/main/default/objects/Policy__c/fields/MTA_Premium_Refund__c.field-meta.xml
<CustomField>
    <fullName>MTA_Premium_Refund__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MtaHasPremiumRefund Instanda API Mapping Field</description>
    <label>MTA Premium Refund</label>
    <type>Checkbox</type>
</CustomField>