force-app/main/default/objects/Policy__c/fields/MTA_Total_Refundable__c.field-meta.xml
<CustomField>
    <fullName>MTA_Total_Refundable__c</fullName>
    <description>MtaTotalRefundable Instanda API Mapping Field</description>
    <label>MTA Total Refundable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>