force-app/main/default/objects/Policy__c/fields/Not_Renewing_Reason__c.field-meta.xml
<CustomField>
    <fullName>Not_Renewing_Reason__c</fullName>
    <label>Not Renewing Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>