force-app/main/default/objects/Policy__c/fields/Not_Renewing_Reason_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Not_Renewing_Reason_Picklist__c</fullName>
    <description>If this is filled, then this Policy is recognised as not renewing.</description>
    <label>Not Renewing Reason Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Changed business activity</fullName>
            </value>
            <value>
                <fullName>Changed circumstances</fullName>
            </value>
            <value>
                <fullName>Chased too late</fullName>
            </value>
            <value>
                <fullName>Chase exhausted</fullName>
            </value>
            <value>
                <fullName>Company closed</fullName>
            </value>
            <value>
                <fullName>Company dormant</fullName>
            </value>
            <value>
                <fullName>Contact at renewal</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Declined by insurers</fullName>
            </value>
            <value>
                <fullName>Does not require insurance</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Duplicate/Test</fullName>
            </value>
            <value>
                <fullName>Gone back to employment</fullName>
            </value>
            <value>
                <fullName>Illness</fullName>
            </value>
            <value>
                <fullName>Incorrect Contacts</fullName>
            </value>
            <value>
                <fullName>Insured elsewhere (no proof)</fullName>
            </value>
            <value>
                <fullName>Insured elsewhere (proof provided)</fullName>
            </value>
            <value>
                <fullName>Insured with Kingsbridge</fullName>
            </value>
            <value>
                <fullName>Insuring with agency</fullName>
            </value>
            <value>
                <fullName>Insuring with competitor</fullName>
            </value>
            <value>
                <fullName>Insuring with end client</fullName>
            </value>
            <value>
                <fullName>Insuring with professional body</fullName>
            </value>
            <value>
                <fullName>Moving from UK</fullName>
            </value>
            <value>
                <fullName>No work</fullName>
            </value>
            <value>
                <fullName>Premium too expensive</fullName>
            </value>
            <value>
                <fullName>Purchased run-off cover</fullName>
            </value>
            <value>
                <fullName>Refuses to give reason</fullName>
            </value>
            <value>
                <fullName>Renewal cancelled</fullName>
            </value>
            <value>
                <fullName>Renewal midterm cancellation</fullName>
            </value>
            <value>
                <fullName>Renewal too expensive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>