force-app/main/default/objects/Policy__c/fields/Number_of_Instalments__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Instalments__c</fullName>
    <description>The number of instalments to be paid.</description>
    <label>Number of Instalments</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>