force-app/main/default/objects/Policy__c/fields/Opportunity_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Line_Item__c</fullName>
    <description>A link to the Opportunity Line Item which created this Policy.</description>
    <formula>From_Opportunity__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Line Item</label>
    <type>Text</type>
</CustomField>