force-app/main/default/objects/Policy__c/fields/Opportunity_Line_Item_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Line_Item_ID__c</fullName>
    <label>Opportunity Line Item ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>