force-app/main/default/objects/Policy__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <description>Holds the value of the partner this policy purchase is attributed to.</description>
    <formula>Customer__r.Partner_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner</label>
    <type>Text</type>
</CustomField>