force-app/main/default/objects/Policy__c/fields/Partner_Cancellation_Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>Partner_Cancellation_Notification_Email__c</fullName>
    <label>Partner Cancellation Notification Email</label>
    <type>Email</type>
</CustomField>