force-app/main/default/objects/Policy__c/fields/Partner_OLD__c.field-meta.xml
<CustomField>
    <fullName>Partner_OLD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner [OLD]</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Policies (Partner [OLD])</relationshipLabel>
    <relationshipName>Policies_PartnerOld</relationshipName>
    <type>Lookup</type>
</CustomField>