force-app/main/default/objects/Policy__c/fields/Partner_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Partner_Owner_Email__c</fullName>
    <label>Partner Owner Email</label>
    <type>Email</type>
</CustomField>