force-app/main/default/objects/Policy__c/fields/Premium_Value_Formula__c.field-meta.xml
<CustomField>
    <fullName>Premium_Value_Formula__c</fullName>
    <description>The premium part of the price (excluding tax price).</description>
    <formula>Value__c - Tax_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The premium part of the price (excluding tax price).</inlineHelpText>
    <label>Premium Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>