force-app/main/default/objects/Policy__c/fields/Referral_Notes__c.field-meta.xml
<CustomField>
    <fullName>Referral_Notes__c</fullName>
    <formula>From_Opportunity__r.Referral_notes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral Notes</label>
    <type>Text</type>
</CustomField>