force-app/main/default/objects/Policy__c/fields/Referral_reason__c.field-meta.xml
<CustomField>
    <fullName>Referral_reason__c</fullName>
    <formula>TEXT(From_Opportunity__r.Referral_reason__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral reason</label>
    <type>Text</type>
</CustomField>