force-app/main/default/objects/Policy__c/fields/Renewal_Count__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Count__c</fullName>
    <description>RenewalCount Instanda API Mapping Field</description>
    <label>Renewal Count</label>
    <length>255</length>
    <type>Text</type>
</CustomField>