force-app/main/default/objects/Policy__c/fields/Renewal_Opp_Generated__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Opp_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Created for flow automation to check if a renewal opportunity already exists for a policy before creating a new one. Only proceed to create a renewal opportunity if the field is not ticked.</inlineHelpText>
    <label>Renewal Opp Generated</label>
    <type>Checkbox</type>
</CustomField>