force-app/main/default/objects/Policy__c/fields/SharePoint_Endorsement_Link__c.field-meta.xml
<CustomField>
    <fullName>SharePoint_Endorsement_Link__c</fullName>
    <label>SharePoint Endorsement Link</label>
    <type>Url</type>
</CustomField>