force-app/main/default/objects/Policy__c/fields/Status_Flag__c.field-meta.xml
<CustomField>
    <fullName>Status_Flag__c</fullName>
    <formula>IMAGE(
CASE(  Status__c ,
&quot;Live&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;Cancelled&quot;, &quot;/img/samples/flag_red.gif&quot;,
&quot;Expired&quot;, &quot;/img/samples/flag_red.gif&quot;,
&quot;/s.gif&quot;),
&quot;Status Flag&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Flag</label>
    <type>Text</type>
</CustomField>