force-app/main/default/objects/Policy__c/fields/Tax_Value__c.field-meta.xml
<CustomField>
    <fullName>Tax_Value__c</fullName>
    <description>The amount of the total cost which is tax (in the case of insurance, IPT).</description>
    <label>Tax Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>