force-app/main/default/objects/Policy__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <defaultValue>12</defaultValue>
    <description>The term of the policy in months.</description>
    <label>Term</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>