force-app/main/default/objects/Policy__c/fields/Unsuccessful_Auto_Renewal_Action__c.field-meta.xml
<CustomField>
    <fullName>Unsuccessful_Auto_Renewal_Action__c</fullName>
    <formula>DATEVALUE(Expiry_Date_time__c) - TODAY() = 6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unsuccessful Auto Renewal Action</label>
    <type>Checkbox</type>
</CustomField>