force-app/main/default/objects/Policy__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>The Total Payable price on this policy. (Including all charges and add ons)</description>
    <inlineHelpText>The Total Payable price on this policy. (Including all charges and add ons)</inlineHelpText>
    <label>Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>