force-app/main/default/objects/Policy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Inception_Date_Time__c</columns>
    <columns>Expiry_Date_time__c</columns>
    <columns>Status__c</columns>
    <columns>Business_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Payment_Method__c</columns>
    <columns>Product__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Unsuccessful_Auto_Renewal_Action__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Payment_Method__c</field>
        <operation>contains</operation>
        <value>close</value>
    </filters>
    <label>All</label>
</ListView>