force-app/main/default/objects/Policy__c/listViews/Cancelled_Stu.listView-meta.xml
<ListView>
    <fullName>Cancelled_Stu</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </filters>
    <label>Cancelled (Stu)</label>
</ListView>