force-app/main/default/objects/Policy__c/listViews/New_Business_Contractor_Policy.listView-meta.xml
<ListView>
    <fullName>New_Business_Contractor_Policy</fullName>
    <filterScope>Queue</filterScope>
    <label>New Business - Contractor</label>
    <queue>New_Business_Contractor</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>