force-app/main/default/objects/Policy__c/listViews/Policy_Owner_Policy.listView-meta.xml
<ListView>
    <fullName>Policy_Owner_Policy</fullName>
    <columns>NAME</columns>
    <columns>Business_Type__c</columns>
    <columns>Customer__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Opportunity_Line_Item_ID__c</columns>
    <columns>Opportunity_Line_Item__c</columns>
    <columns>Product__c</columns>
    <columns>Product_Name__c</columns>
    <filterScope>Queue</filterScope>
    <label>Policy Owner</label>
    <queue>Policy_Owner</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>